--- a/reflections/week01/01.md
+++ b/reflections/week01/01.md
@@ -8,12 +8,20 @@
 
 1. In your own words, why do we use Git?
 
+Git is used to store and host projects as well as allow for multiple developes to work on the same project.
+
 2. What are the benefits of having multiple branches?
 
+Multiple branches allow for parallel development of projects such as a main and a test environment.
+
 3. What is the difference between Git and GitHub?
+
+Git is a local repository while GitHub is a remote repository.
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/iangrell/fs-journal)**
 
 Identify at least 1 takeaway from today's assignment
+
+Today I have gained a better understanding of Git/GitHub and both the differences between them and how they work together.
