--- a/reflections/week01/02.md
+++ b/reflections/week01/02.md
@@ -8,12 +8,20 @@
 
 1. What is a ***pseudo-class*** and what are some of the most common ones you think you will use?
 
+A pseudo-class defines special states of an element such as a style change to to the color of a button when the cursor hovers over it or a link has been clicked. 
+
 2. What is ***specificity*** and how might you use it to your benefit?
 
+Specificity is built into CSS which assigns numerical values to different rules that are applied to the same element, so the correct rule will be followed.  
+
 3. What problems do you think you could run into if you over-utilized the `!important` feature?
+
+!important will override all other style rules, except for another !important.  Over-use of this can lead to confusion in the code and make it difficult to correct errors or make changes. 
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/iangrell/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's assignment
+
+Coding is hard.  I became more familiar with how to build a site from scratch and the use of CSS and classes, but also that I have a lot to learn.
