--- a/reflections/week01/03.md
+++ b/reflections/week01/03.md
@@ -8,12 +8,19 @@
 
 1. What is your favorite tip for improving your design? How does it benefit your site?
 
+This is something I am struggling with and need to improve on.
+
 2. Compile a couple of resources that you think might be helpful when trying to review examples of good design ideas.
 
+
+
 3. How do you think good design influences people when visiting a website, and what sorts of things could you convey through design alone?
+
+Design is incredibly important, it allow a site to be both pleasing and enjoyable to visit visually as well as easy to navigate and use.
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/iangrell/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's assignment
+Bootstrap is a very useful extension and I am looking forward to becoming more familiar with it.
