--- a/reflections/week01/03.md
+++ b/reflections/week01/03.md
@@ -12,7 +12,7 @@ This is something I am struggling with and need to improve on.
 
 2. Compile a couple of resources that you think might be helpful when trying to review examples of good design ideas.
 
-
+Keep icons small, add extra spacing, offset shadows
 
 3. How do you think good design influences people when visiting a website, and what sorts of things could you convey through design alone?
 
@@ -23,4 +23,5 @@ Design is incredibly important, it allow a site to be both pleasing and enjoyabl
 **[Repo](https://github.com/iangrell/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's assignment
+
 Bootstrap is a very useful extension and I am looking forward to becoming more familiar with it.
