--- a/reflections/week01/04.md
+++ b/reflections/week01/04.md
@@ -8,12 +8,20 @@
 
 1. What is the purpose of ***wireframing***? 
 
+Wireframing is used to create a blueprint of the webpage to layout the basic structure, user flow, and functionality of the site.
+
 2. What are the different levels of detail in wireframes, and why is each one useful?
 
+There is low, mid, and high fidelity wireframes. Low is used as a jumping off point, to get the first ideas and layout on the page.  Mid is used to create more accurate representations of what the layout might be and to start making some refinements to specific elements.  High is used to finalize the page layout and can be done with specific tools such as figma to allow for the completion of the site.
+
 3. Do you think wireframes are worth the time, energy, and effort that they require? Why or Why not?
+
+I think wireframe are definitely worth the time.  It is great to have a plan, and a well thought out plan, before starting to build just about anything.  It allows you to know your goals, let you estimate your progress, keep you on track, and help you manage your time and resources.
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/iangrell/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's assignment
+
+Unfortunately I was sick and not able to work in a group which I was looking forward to.  I do think I was able to gain a better understanding of laying the page out even though my work was slow today.
