--- a/reflections/week01/05.md
+++ b/reflections/week01/05.md
@@ -3,6 +3,17 @@ This reflection is open-format, so it can be whatever you like. Take this opport
 
 ## Prompts
 - What went well this week?
+
+I am very excited to start this program and think I was able to solve some of my own struggles this week.
+
 - What did you learn that was a shock or surprise?
+
+I was unaware of bootstrap and how useful a tool it is.
+
 - What are you struggling with?
+
+I don't think I have a very strong understanding flex boxes, or sizing containers in general and I will submit a tutor request to address this. Being very sick this week made it hard to pay full attention, this added extra stress to this week knowing that is not a great way to start this program.  I am doing my best to put the stress of that behind me and focus on doing what I need to do to move forward and continue to learn what I can. 
+
 - What would you count as a victory?
+
+I know it may be premature, but I think I did fairly well on my first checkpoint.  There was one requirement I was not able to complete but I think I was successful on all the others.  I could be very wrong about this though. 
