--- a/reflections/week01/02.md
+++ b/reflections/week01/02.md
@@ -20,7 +20,7 @@ Specificity is built into CSS which assigns numerical values to different rules 
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/iangrell/<ASSIGNMENT_REPO>)**
+**[Repo](https://iangrell.github.io/landing-page/)**
 
 Identify at least 1 takeaway from today's assignment
 
