--- a/reflections/week01/03.md
+++ b/reflections/week01/03.md
@@ -20,7 +20,7 @@ Design is incredibly important, it allow a site to be both pleasing and enjoyabl
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/iangrell/<ASSIGNMENT_REPO>)**
+**[Repo](https://iangrell.github.io/clone-site/)**
 
 Identify at least 1 takeaway from today's assignment
 
