--- a/reflections/week01/04.md
+++ b/reflections/week01/04.md
@@ -20,7 +20,7 @@ I think wireframe are definitely worth the time.  It is great to have a plan, an
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/iangrell/<ASSIGNMENT_REPO>)**
+**[Repo](https://iangrell.github.io/clone_site_2/)**
 
 Identify at least 1 takeaway from today's assignment
 
