--- a/reflections/week02/01.md
+++ b/reflections/week02/01.md
@@ -8,12 +8,21 @@
 
 1. What is ***scope***?
 
+Scope describes where a variable is defined, either globally or blocked/functionally/locally.
+
 2. What is ***Hoisting***?
+
+Hoisting is describing when variable are moved to the top of their scope.
 
 3. In what cases might you use `let` vs. `const` vs. `var`?
 
+It seems like in most cases, it is better to use either `let` or `const` instead of `var`. Const is use to assign a value that cannot be changed or updated, while let can be updated. 
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/iangrell/<ASSIGNMENT_REPO>)**
+**[Repo](https://iangrell.github.io/scoreboard/)**
 
 Identify at least 1 takeaway from today's assignment
+
+I did need some help with the afternoon assignment, but able to figure out some of my javascript struggles on my own.  Still struggling with placing elements on the page.
+
