--- a/reflections/week02/02.md
+++ b/reflections/week02/02.md
@@ -14,6 +14,6 @@
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/iangrell/<ASSIGNMENT_REPO>)**
+**[Repo](https://iangrell.github.io/warehouse_manager/)**
 
 Identify at least 1 takeaway from today's assignment
