--- a/reflections/week02/03.md
+++ b/reflections/week02/03.md
@@ -14,6 +14,6 @@
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/iangrell/<ASSIGNMENT_REPO>)**
+**[Repo](https://iangrell.github.io/ice_cream_parlor/)**
 
 Identify at least 1 takeaway from today's assignment
