--- a/reflections/week02/02.md
+++ b/reflections/week02/02.md
@@ -8,12 +8,20 @@
 
 1. What are the three ways to syntactically write a function? What are the differences in how the function acts (if any)?
 
+A function declaration, function expression, arrow function
+
 2. What is the main difference between ***parameters*** and ***arguments***?
 
+A parameter in the named variable passed into a function, an argument is the actual value
+
 3. What are ***higher-order functions***? Can you provide an example?
+
+A higher order function is a function that either accepts functions as a parameter or returns a function.  
 
 ## Afternoon Assignment Link
 
 **[Repo](https://iangrell.github.io/warehouse_manager/)**
 
 Identify at least 1 takeaway from today's assignment
+
+With the tutoring, I'm beginning to better understand the layering of row and columns within Bootstrap. 
