--- a/reflections/week02/03.md
+++ b/reflections/week02/03.md
@@ -10,10 +10,16 @@
 
 2. Which tab allows you to see the breakdown of HTML/CSS, and how can this tab be useful when debugging HTML?
 
+The Element tab, this allows you to move through the page and directly manipulate the elements which allows you to easily identify specific code where there is a problem. 
+
 3. Instead of writing everything to the console, what is a better way to debug your code?
+
+Using breakpoints in the source tab
 
 ## Afternoon Assignment Link
 
 **[Repo](https://iangrell.github.io/ice_cream_parlor/)**
 
 Identify at least 1 takeaway from today's assignment
+
+I am beginning to have a better understanding of JavaScript.
