--- a/reflections/week02/04.md
+++ b/reflections/week02/04.md
@@ -8,12 +8,20 @@
 
 1. What are the benefits of making a plan for your application before starting to write the code?
 
+Planning allows you to have an outline, identify early issues you may have, and do research as needed prior to actually writing code.
+
 2. How do you find answers when you are stuck?
 
+I use the code from the daily lectures as well as using google and site like W3Schools.
+
 3. What coding mistakes would you be most likely to make? What advice from this article do you find most helpful?
+
+As a beginner, I know that I am not writing code as clear as it should be.  Quality code will be something I will focus on.
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/iangrell/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's assignment
+
+This was my first experience working with a group which was very beneficial to be able to bounce idea off each other as well as talk through problems.
