--- a/reflections/week02/05.md
+++ b/reflections/week02/05.md
@@ -4,6 +4,17 @@ This reflection is open-format, so it can be whatever you like. Take this opport
 
 ## Prompts
 - What went well this week?
+
+Just building on top of what I learned the week before and starting to get a base of knowledge.
+
 - What did you learn that was a shock or surprise?
+
+Web development and coding are completely new to me and I am just trying to learn as much as I can, there is so much I don't know that I can't really identify something that shocked or surprised me.
+
 - What are you struggling with?
+
+I am struggling with writing JavaScript without a direct reference. once I see it, I feel like I understand it for the most part, but without that I easily get lost.
+
 - What would you count as a victory?
+
+I was able to get a fair portion of the requirements for this weeks outline completed while in lab, I thought I was more lost than that and it was going to take me longer to complete.
