--- a/reflections/week03/01.md
+++ b/reflections/week03/01.md
@@ -8,12 +8,20 @@
 
 1. What problem does using ***exports*** solve?
 
+Exports allows you to makes modules accessible to other parts of the code so it does not have to be rewritten.
+
 2. How does `export` differ from `export default`?
+
+Export sends the code, Export default sends the value.  This will change how the code is imported.
 
 3. What is a benefit of using the "module" system?
 
+Code can be organized into files with similar functionality.  This can also help with debugging
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/iangrell/<ASSIGNMENT_REPO>)**
+**[Repo](https://iangrell.github.io/game_night/)**
 
 Identify at least 1 takeaway from today's assignment
+
+Being organized, clear when naming, and understanding the flow of information is incredibly important.
