--- a/reflections/week03/02.md
+++ b/reflections/week03/02.md
@@ -8,6 +8,8 @@
 
 1. What is the purpose of ***Encapsulation***?
 
+Encapsulation is the bundling of data and restricts the access of that data from outside the bundle.
+
 2. What were some of the problems with ***closures*** and the ***underscore prefix*** convention?
 
 3. How do we create private variables in an ES6 `Class`? Why would you do this?
