--- a/reflections/week03/02.md
+++ b/reflections/week03/02.md
@@ -12,10 +12,16 @@ Encapsulation is the bundling of data and restricts the access of that data from
 
 2. What were some of the problems with ***closures*** and the ***underscore prefix*** convention?
 
+The problem with the underscore prefix is that it was a roundabout way to solve the problem of making objects private prior to the private fields proposal.  New developers may not be aware of this old convention.  
+
 3. How do we create private variables in an ES6 `Class`? Why would you do this?
+
+Private variables are useful because they allow the developer to add objects or functions that the user will not have access to.
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/iangrell/<ASSIGNMENT_REPO>)**
+**[Repo](https://iangrell.github.io/vendr/)**
 
 Identify at least 1 takeaway from today's assignment
+
+I'm getting a better understanding of the flow and organization of MVC.
