--- a/reflections/week03/03.md
+++ b/reflections/week03/03.md
@@ -8,9 +8,15 @@
 
 1. What are the two common operations that we will set in the ***handler***?
 
+The handler will contain the object with the original values but the the basic operations will have custom logic specified in the handler.
+
 2. What do you have to make sure you are doing with every `get` to ensure the value does not become `undefined`?
 
+The get operators need to take in two parameters, the object and the property being accessed.
+
 3. What are some of the benefits of the `Proxy` object that we are using in our structure for applications?
+
+Proxies allow for objects to be private but have a key to access the information.
 
 ## Afternoon Assignment Link
 
