--- a/reflections/week03/03.md
+++ b/reflections/week03/03.md
@@ -20,6 +20,8 @@ Proxies allow for objects to be private but have a key to access the information
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/iangrell/<ASSIGNMENT_REPO>)**
+**[Repo](https://iangrell.github.io/spring23-mvcGregslist/)**
 
 Identify at least 1 takeaway from today's assignment
+
+I'm starting to have a better grasp of the flow and structure of MVC.
