--- a/reflections/week03/04.md
+++ b/reflections/week03/04.md
@@ -8,6 +8,8 @@
 
 1. What problems does the ***observer pattern*** seek to solve?
 
+The need for the page to update after the user has provided input, which can lead to a ot of push and pull in the code.
+
 2. What are the three mechanisms of the observer pattern?
 
 3. Review the code generated from the bcw-template, and reflect on the `Proxy` objects from yesterday and your understanding of the observer pattern today. With this knowledge, explain how the magic of the bcw-template uses these two concepts to manage and update the DOM.
