--- a/reflections/week03/04.md
+++ b/reflections/week03/04.md
@@ -16,6 +16,6 @@ The need for the page to update after the user has provided input, which can lea
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/iangrell/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/IsaacDuff/Fruit_Salad)**
 
 Identify at least 1 takeaway from today's assignment
