--- a/reflections/week03/04.md
+++ b/reflections/week03/04.md
@@ -12,6 +12,8 @@ The need for the page to update after the user has provided input, which can lea
 
 2. What are the three mechanisms of the observer pattern?
 
+The subscribe method, un-subscribe method, and broadcast method.
+
 3. Review the code generated from the bcw-template, and reflect on the `Proxy` objects from yesterday and your understanding of the observer pattern today. With this knowledge, explain how the magic of the bcw-template uses these two concepts to manage and update the DOM.
 
 ## Afternoon Assignment Link
@@ -19,3 +21,5 @@ The need for the page to update after the user has provided input, which can lea
 **[Repo](https://github.com/IsaacDuff/Fruit_Salad)**
 
 Identify at least 1 takeaway from today's assignment
+
+Again, just building on understanding the flow of MVC
