--- a/reflections/week03/05.md
+++ b/reflections/week03/05.md
@@ -3,7 +3,18 @@ This reflection is open-format, so it can be whatever you like. Take this opport
 
 
 ## Prompts
-- What went well this week?
+- What went well this week? 
+
+I'm told by TA's that I'm on track
+
 - What did you learn that was a shock or surprise?
+
+Overall, the MVC pattern was surprising and interesting.  I like the structure and flow, even though I don't have a good grasp yet.
+
 - What are you struggling with?
+
+Still struggling with writing functions and so far the checkpoints are taking me the entire weekend, about 12 hours a day and it's really wearing on me.
+
 - What would you count as a victory?
+
+Not sure.
