--- a/reflections/week04/01.md
+++ b/reflections/week04/01.md
@@ -6,11 +6,23 @@
 
 ## Questions
 
-1. What are some of the signs and causes of 'callback hell'?
+1. What are some of the signs and causes of 'callback hell'?'
+
+Callback hell is when too many callbacks or asynchronous code is used together.  This can be visible with a pyramid structure and many '})' at the end
 
 2. What does ***asynchronous*** mean, and how are callbacks involved?
 
+Asynchronous code means that function will not run right now or be delayed until another function is completed.  Callbacks is just a naming convention that describes a function that takes some time to return a result.
+
 3. Summarize the 3 ways to avoid/fix 'callback hell.'
+
+- Keep your code shallow - This describes naming individual functions, which allows for better readability and organization.
+
+- Modularize - Create modules that do 1 thing, then you can group similar modules into larger modules.  This allows the modules to be accessed for other parts of code and keeps it organized.
+
+- Handle every error - This describes making your code stable by reviewing and fixing errors. BY having the first argument be the 'error' and using code linters is a good way to identify and find all errors.
+
+
 
 ## Afternoon Assignment Link
 
