--- a/reflections/week04/02.md
+++ b/reflections/week04/02.md
@@ -8,6 +8,8 @@
 
 1. What are the three states of a `Promise`?
 
+Pending, resolved, or rejected.
+
 2. How do `Promise`s seek to resolve the issues of 'callback hell'?
 
 3. What is the difference between `.then()` and `.catch()`?
