--- a/reflections/week04/01.md
+++ b/reflections/week04/01.md
@@ -26,6 +26,8 @@ Asynchronous code means that function will not run right now or be delayed until
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/iangrell/<ASSIGNMENT_REPO>)**
+**[Repo](https://iangrell.github.io/trivia_db/)**
 
 Identify at least 1 takeaway from today's assignment
+
+The use of API's opens up opportunities to create a wide array of applications.
