--- a/reflections/week04/02.md
+++ b/reflections/week04/02.md
@@ -12,7 +12,11 @@ Pending, resolved, or rejected.
 
 2. How do `Promise`s seek to resolve the issues of 'callback hell'?
 
+When having multiple callbacks and attaching them to promises then chaining them together will keep the code more organized and readable which will help prevent callback hell.
+
 3. What is the difference between `.then()` and `.catch()`?
+
+the then method is used after a promise is returned as resolved, the catch method is used if it returns rejected.  Each will describe what to do next depending on how the promise is returned.
 
 ## Afternoon Assignment Link
 
