--- a/reflections/week04/02.md
+++ b/reflections/week04/02.md
@@ -20,6 +20,8 @@ the then method is used after a promise is returned as resolved, the catch metho
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/iangrell/<ASSIGNMENT_REPO>)**
+**[Repo](https://iangrell.github.io/spring23-asyncGregslist/)**
 
 Identify at least 1 takeaway from today's assignment
+
+How interconnected these applications are and that I'm getting better at identifying errors and how to fix them.
