--- a/reflections/week04/03.md
+++ b/reflections/week04/03.md
@@ -8,12 +8,14 @@
 
 1. What is the purpose of `async`/`await`?
 
+Async/await a better way to handle callbacks because it is a combination of a promise and generator. 
+
 2. What must you do in order to `await` a promise inside of a function?
 
 3. What are some of the primary benefits of `async`/`await`?
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/iangrell/<ASSIGNMENT_REPO>)**
+**[Repo](https://iangrell.github.io/pokedex/)**
 
 Identify at least 1 takeaway from today's assignment
