--- a/reflections/week04/03.md
+++ b/reflections/week04/03.md
@@ -12,10 +12,16 @@ Async/await a better way to handle callbacks because it is a combination of a pr
 
 2. What must you do in order to `await` a promise inside of a function?
 
+the function needs to be async.
+
 3. What are some of the primary benefits of `async`/`await`?
+
+Async/await is both very easy to read as well as debug.
 
 ## Afternoon Assignment Link
 
 **[Repo](https://iangrell.github.io/pokedex/)**
 
 Identify at least 1 takeaway from today's assignment
+
+Managing data between 2 API's can be a challenge.
