--- a/reflections/week04/04.md
+++ b/reflections/week04/04.md
@@ -8,9 +8,15 @@
 
 1. What does ***REST*** stand for, and in simple terms what does it mean?
 
+Representational State Transfer, when a client requests information, the API will return the state of that requested information.
+
 2. What does ***stateless*** mean?
 
+The server does not remember anything about the user of the API.  Each individual request will include all the the required information the server needs to complete the request.
+
 3. What URL pattern is used when writing a ***RESTful API***?
+
+The URL will use the HTTP method such as Get, Post, Put, or Delete and require a specific identifier for that information.
 
 ## Afternoon Assignment Link
 
