--- a/reflections/week04/04.md
+++ b/reflections/week04/04.md
@@ -20,6 +20,6 @@ The URL will use the HTTP method such as Get, Post, Put, or Delete and require a
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/iangrell/<ASSIGNMENT_REPO>)**
+**[Repo](https://iangrell.github.io/gifted/)**
 
 Identify at least 1 takeaway from today's assignment
