--- a/reflections/week04/05.md
+++ b/reflections/week04/05.md
@@ -4,6 +4,17 @@ This reflection is open-format, so it can be whatever you like. Take this opport
 
 ## Prompts
 - What went well this week?
+
+I'm still passing the course
+
 - What did you learn that was a shock or surprise?
+
+Again, I have little to no experience with this field, just trying to take in as much as I can.
+
 - What are you struggling with?
+
+I feel like I'm missing something basic, I constantly struggle through almost every part of the checkpoints and get stuck on things that I have a feeling are simple.
+
 - What would you count as a victory?
+
+Not feeling too victorious lately.
