--- a/reflections/week05/01.md
+++ b/reflections/week05/01.md
@@ -8,9 +8,15 @@
 
 1. What is the purpose of a ***query string***?
 
+The purpose is to pass information to and from a website by appending that information to the end of the url.
+
 2. What is the format of a ***query parameter***? How does it start? How do you distinguish between one parameter and the next?
 
+It start with a "?", parameters are separated by "&".
+
 3. When do you think query parameters would be helpful when writing your server?
+
+Foe example, when filtering multiple parameter could be use to get more accurate results from that filter.
 
 ## Afternoon Assignment Link
 
