--- a/reflections/week05/02.md
+++ b/reflections/week05/02.md
@@ -8,9 +8,15 @@
 
 1. What are the three types of data relationships?
 
+One-to-one (1:1), one-to-many (1:N), many-to-many (N:M) 
+
 2. What are the benefits of traditional ***linking*** relationships over ***embedding*** relationships?
 
+With 1:N linking will use Foreign Keys to link information such as comments to the original post, the advantage is the original post document will not grow, preventing it from growing too large. 
+
 3. When modeling data, it's important to consider how a user will use and filter that data. How does this affect the way you model a ***many-to-many*** relationship? 
+
+Depending on how many relationships between the entities there are and what the user will filter will determine the best way to model this between two way embedding, one way embedding, and third collection embedding. 
 
 ## Afternoon Assignment Link
 
