--- a/reflections/week05/03.md
+++ b/reflections/week05/03.md
@@ -7,9 +7,16 @@
 
 1. In simple terms what is ***timeboxing***?
 
+Timeboxing is a time management technique where you set a designated amount of time to complete a specific task and commit to treating that as a deadline.
+
 2. What three strategies will you implement and how?
 
+The 2 minute rule will useful to just get simple tasks done when they come up, this will help prevent a build up of small tasks.  I will need to practice and adapt to get better at estimating the time it takes to complete a task.
+Swallow the frog is a greta strategy to not have the most difficult task hanging over you the rest of the day.
+
 3. Give an example of when you would have benefitted from timeboxing and how? 
+
+I have been using this when stuck on a problem in lab, I'll give myself 15-20 minutes to figure it out before going and asking for help.  This allows time to try to solve my own problem but also prevents me from spinning my wheels and wasting time when there are resources available.
 
 ## Afternoon Assignment Link
 
