--- a/reflections/week05/04.md
+++ b/reflections/week05/04.md
@@ -8,9 +8,15 @@
 
 1. What is a ***virtual property***?
 
+Virtual properties are additional fields for a given model.
+
 2. When might you use a virtual property? 
 
+When wanting to gather multiple pieces of information, the virtual properties can be appended together to grab all of the requested information.
+
 3. How do you search by a virtual property's value?
+
+set methods can be used to perform operations such as searching for the value.
 
 ## Afternoon Assignment Link
 
