--- a/reflections/week05/01.md
+++ b/reflections/week05/01.md
@@ -20,6 +20,8 @@ Foe example, when filtering multiple parameter could be use to get more accurate
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/iangrell/<ASSIGNMENT_REPO>)**
+**[Repo](https://iangrell.github.io/cats_api/)**
 
 Identify at least 1 takeaway from today's assignment
+
+Again, structure and organization are always important.
