--- a/reflections/week05/02.md
+++ b/reflections/week05/02.md
@@ -23,3 +23,5 @@ Depending on how many relationships between the entities there are and what the 
 **[Repo](https://github.com/iangrell/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's assignment
+
+I enjoy the structure of todays assignment and the repetition for practice.
