--- a/reflections/week05/03.md
+++ b/reflections/week05/03.md
@@ -20,6 +20,6 @@ I have been using this when stuck on a problem in lab, I'll give myself 15-20 mi
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/iangrell/<ASSIGNMENT_REPO>)**
+**[Repo](https://iangrell.github.io/da_planets/)**
 
 Identify at least 1 takeaway from today's assignment
