--- a/reflections/week05/03.md
+++ b/reflections/week05/03.md
@@ -23,3 +23,5 @@ I have been using this when stuck on a problem in lab, I'll give myself 15-20 mi
 **[Repo](https://iangrell.github.io/da_planets/)**
 
 Identify at least 1 takeaway from today's assignment
+
+I enjoy building the back end.
