--- a/reflections/week05/05.md
+++ b/reflections/week05/05.md
@@ -3,6 +3,17 @@ This reflection is open-format, so it can be whatever you like. Take this opport
 
 ## Prompts
 - What went well this week?
+
+The hackathon was a great experience.
+
 - What did you learn that was a shock or surprise?
+
+Working in a team was very interesting, working off someone else's code.
+
 - What are you struggling with?
+
+Still not completely confident without direct references.
+
 - What would you count as a victory?
+
+the hackathon in general, the teamwork and building a full stack application.
