--- a/reflections/week06/01.md
+++ b/reflections/week06/01.md
@@ -8,12 +8,20 @@
 
 1. What is ***Component-Based Architecture***?
 
+A method for encapsulating pieces of a larger interface into smaller self-sustaining, independent systems.
+
 2. What are some benefits of Component-Based Architecture?
+
+With CBA, each component is self sustained which allows for it to be dynamically updated without refreshing the page.
 
 3. What are some drawbacks to Component-Based Architecture?
 
+With each component being a separate system, this can lead to the view being bloated, negatively affect readability, and be over engineered.
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/iangrell/<ASSIGNMENT_REPO>)**
+**[Repo](https://iangrell.github.io/vue-playground/)**
 
 Identify at least 1 takeaway from today's assignment
+
+It's exciting to learn view, rough to start something new but I can see the potential
