--- a/reflections/week06/02.md
+++ b/reflections/week06/02.md
@@ -8,9 +8,15 @@
 
 1. What are ***props***?
 
+Props are how we pass variables between different components.
+
 2. What are props used for?
 
+this allows the value of variables to be used by multiple components.
+
 3. Where can props be used or accessed?
+
+Props are passed down the component tree to descendents, from parent to child. 
 
 ## Afternoon Assignment Link
 
