--- a/reflections/week06/03.md
+++ b/reflections/week06/03.md
@@ -8,9 +8,15 @@
 
 1. What are ***lifecycle hooks***? What are lifecycle hooks used for?
 
+Lifecycle hooks are descriptions of where in the process the component is, created, added to DOM, updated, of destroyed.
+
 2. How have you used lifecycle hooks in your afternoon projects?
 
+Mounted hooks allow us to bring vue elements to the DOM.
+
 3. What are ***mounting hooks***? When might you use them?
+
+Mounted hooks give you full access to to the reactive component, templates and rendered DOM.
 
 ## Afternoon Assignment Link
 
