--- a/reflections/week06/02.md
+++ b/reflections/week06/02.md
@@ -20,6 +20,8 @@ Props are passed down the component tree to descendents, from parent to child.
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/iangrell/<ASSIGNMENT_REPO>)**
+**[Repo](https://iangrell.github.io/gifted-re-vued/)**
 
 Identify at least 1 takeaway from today's assignment
+
+I can see the potential of Vue but am having difficulty with the flow and structure. 
