--- a/reflections/week06/04.md
+++ b/reflections/week06/04.md
@@ -10,7 +10,13 @@
 
 2. When might you use a nested route? (other than the provided example)
 
+A nested route describes components nested inside each other.
+
+Nested routes allow for more complex user interfaces with different components nested inside one another.  This allows for a more dynamic interface.
+
 3. Can you pass parameters through nested routes? When might you use them?
+
+Parameters can be passed through nested routes, this is useful to pass data such as users or pictures to different component on the app.
 
 ## Afternoon Assignment Link
 
