--- a/reflections/week06/03.md
+++ b/reflections/week06/03.md
@@ -20,6 +20,8 @@ Mounted hooks give you full access to to the reactive component, templates and r
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/iangrell/<ASSIGNMENT_REPO>)**
+**[Repo](https://iangrell.github.io/spring23_gregslist_vue/)**
 
 Identify at least 1 takeaway from today's assignment
+
+Still struggling with the order of putting vue together.
