--- a/reflections/week06/04.md
+++ b/reflections/week06/04.md
@@ -8,9 +8,9 @@
 
 1. What is a **nested route***?
 
-2. When might you use a nested route? (other than the provided example)
-
 A nested route describes components nested inside each other.
+
+2. When might you use a nested route? (other than the provided example)
 
 Nested routes allow for more complex user interfaces with different components nested inside one another.  This allows for a more dynamic interface.
 
@@ -20,6 +20,8 @@ Parameters can be passed through nested routes, this is useful to pass data such
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/iangrell/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/IsaacDuff/Blogger)**
 
 Identify at least 1 takeaway from today's assignment
+
+Vue is starting to come together a bit more.
