--- a/reflections/week06/05.md
+++ b/reflections/week06/05.md
@@ -3,6 +3,17 @@ This reflection is open-format, so it can be whatever you like. Take this opport
 
 ## Prompts
 - What went well this week?
+
+I think vue is starting to come together.
+
 - What did you learn that was a shock or surprise?
+
+How vue works, writing html, css and js on the same page.
+
 - What are you struggling with?
+
+I still feel I am a bit slow while coding, really need to think about how things work.
+
 - What would you count as a victory?
+
+I feel like all the knowledge is starting to come together a bit more.
