--- a/reflections/week07/01.md
+++ b/reflections/week07/01.md
@@ -8,9 +8,15 @@
 
 1. What is ***pair programming***? What are the roles and how do they work?
 
+Pair programming is made up of 2 programmers working together at a single station, one watching the screen and navigating, while the other uses the keyboard and mouse and is driving. 
+
 2. What are some benefits of pair programming?
 
+Increased code quality, better diffusion of knowledge through the team, and better coordination among the team.
+
 3. What are some drawbacks to pair programming?
+
+For pair programming to work, both programmers need to be actively engaged, which cannot be forced.
 
 ## Afternoon Assignment Link
 
