--- a/reflections/week07/02.md
+++ b/reflections/week07/02.md
@@ -8,9 +8,15 @@
 
 1. What is ***code documentation***? What are some of the ways to document code?
 
+Code documentation is describing your code is simple, easily readable terms.  This can be done with how to guides, README in the repo, or code documentation in the source.
+
 2. What are some benefits of code documentation?
 
+ This is done so that other developers or or even you later on can clearly understand the code.
+
 3. How important is code documentation and why?
+
+It is very important for legibility and as well as to pass along the intended implementation to your future self or colleagues.
 
 ## Afternoon Assignment Link
 
