--- a/reflections/week07/03.md
+++ b/reflections/week07/03.md
@@ -8,9 +8,15 @@
 
 1. What is the ***user experience***? What should be considered when developing to create a good UX?
 
+UX is every interaction between the people using the application and the application itself.  The focus should be on the user and what they want to do.
+
 2. What are some benefits of taking into account the user experience?
 
+With UX in mind at the beginning of development, this will help design you app, such as the look and functionality.
+
 3. Why is the user experience important?
+
+With a good UX, people are more likely to stay on your app, return, and recommend it to others.
 
 ## Afternoon Assignment Link
 
