--- a/reflections/week08/01.md
+++ b/reflections/week08/01.md
@@ -8,9 +8,15 @@
 
 1. What function does a ***developer portfolio*** provide?
 
+A developer portfolio is used to showcase your skill, allow you to prove you know your craft and help you stand out from the crowd.
+
 2. What makes a developer portfolio effective?
 
+An effective developer portfolio will showcase the skills you want people to notice such as expertise with a particular framework, your ability to work on different kinds of projects, whatever you are trying to demonstrate.
+
 3. What projects do you have that you would include in your portfolio? Why?
+
+With some additional work, I think Tower would be my most complete project.
 
 ## Afternoon Assignment Link
 
