--- a/reflections/week08/02.md
+++ b/reflections/week08/02.md
@@ -8,14 +8,20 @@
 
 1. Why is communication on a small team important?
 
-
+Good communication is important so that each team member knows what they are responsible for as well as adjust to any immediate issues that may come up for the team.  
 
 2. What adjustments from traditionally sized scrum teams need to be made to use the Agile methodology effectively in a small team?
 
+It may be important to expand the scope of communication so that the number of meetings can be reduced. 
+
 3. What is the ***unattainable triangle***? What are the tradeoffs of each side?
+
+Good service that is cheap, won't be fast.  Good service that is fast, won't be cheap. Fast service that is cheap, won't be good.
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/iangrell/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's work
+
+This was my first real experience use figma to design and application and pitch an idea, it went ok.
