--- a/reflections/week08/01.md
+++ b/reflections/week08/01.md
@@ -23,3 +23,5 @@ With some additional work, I think Tower would be my most complete project.
 **[Repo](https://github.com/iangrell/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's work
+
+It was a good experience working in a team to flesh out the idea for a full application.
