--- a/reflections/week08/03.md
+++ b/reflections/week08/03.md
@@ -8,6 +8,8 @@
 
 1. What is ***software development testing***?
 
+Unit testing is supposed to test the smallest unit of code.
+
 2. What are the benefits of testing in software development?
 
 3. What are some potential drawbacks of testing in software development?
@@ -17,3 +19,5 @@
 **[Repo](https://github.com/iangrell/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's work
+
+It was great to fully flesh out the figma for our project.
