--- a/reflections/week08/03.md
+++ b/reflections/week08/03.md
@@ -12,7 +12,11 @@ Unit testing is supposed to test the smallest unit of code.
 
 2. What are the benefits of testing in software development?
 
+Unit testing helps to eliminate worry, a well tested tested module can be trusted
+
 3. What are some potential drawbacks of testing in software development?
+
+It can slow down the process.
 
 ## Afternoon Assignment Link
 
