--- a/reflections/week08/05.md
+++ b/reflections/week08/05.md
@@ -3,6 +3,17 @@ This reflection is open-format, so it can be whatever you like. Take this opport
 
 ## Prompts
 - What went well this week?
+
+I think we designed a pretty good high fidelity figma for our project.
+
 - What did you learn that was a shock or surprise?
+
+I learned another method to accomplish pagination with our team.
+
 - What are you struggling with?
+
+I think we may run into some issues with all the relationships that our app requires. 
+
 - What would you count as a victory?
+
+I think we are making good progress on our cap stone.
