--- a/reflections/week08/04.md
+++ b/reflections/week08/04.md
@@ -8,12 +8,20 @@
 
 1. What are the three main types of testing we can accomplish in Vue? What does each method provide?
 
+Unit Testing - allows you to test individual units of code in isolation.  Component Testing - gives users to test components mounted to the DOM while providing VUE specific conveniences.  End to End Testing - allows developers to validate all the layers of the application.
+
 2. What testing method do you think is the most useful? Why?
 
+I think unit testing will be the most frequent and helpful because it will allow you to have confidence in your code through out the coding process.
+
 3. What testing method do you think is the least useful? Why?
+
+I do think all of these testing methods are useful but would probably say component testing is the least.  Mostly because I think unit testing will be used regularly and ene to end testing is important to test the environment your users will be in and assure all associate backend services and infrastructure are working.  
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/iangrell/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's work
+
+We decided to change up how we were coding and rotating positions from back to front end.  We decided that switching every hour was too short of a time period to be efficient.
