--- a/reflections/week09/01.md
+++ b/reflections/week09/01.md
@@ -8,10 +8,16 @@
 
 2. What went well so far?
 
+We have completed most of the functionality of our application but still have to complete all of the many relationships. 
+
 3. What would you do differently? Why?
+
+I think more specific planning in the beginning would have been a benefit such as naming conventions for the entire application.
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/iangrell/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's work
+
+It is very important to learn the functionality of our external api.
