--- a/reflections/week09/03.md
+++ b/reflections/week09/03.md
@@ -10,9 +10,15 @@
 
 1. What is a ***Base64 encoded image***?
 
+Base64 is an encoding schema used to represent binary data in text format.
+
 2. What are the drawbacks of using Base64 encoding?
 
+Base64 on average will increase file size by 25% which increases bandwidth and download time. The browser will also need to decode the base64 then the image leading to extra work. 
+
 3. Why are these drawbacks issues in this day and age versus in the past?
+
+With the introduction of multiplexing with http/2, web browsers became vry efficient at delivering many files through a single connection removing the need for images to be embedded directly into HTML or CSS.
 
 ## Afternoon Assignment Link
 
