--- a/reflections/week09/02.md
+++ b/reflections/week09/02.md
@@ -8,12 +8,20 @@
 
 1. What is a ***Github action*** and how do they work?
 
+Github Actions use text files called workflows that can handle some build tasks when needed.
+
 2. What benefits do Github actions provide?
 
+You can have these actions such as test your code be triggered by specific events such as when someone pushes to github.
+
 3. What types of ***trigger actions*** can a workflow use? What do they do?
+
+Trigger Actions such as a push, pull request or a fork can be used to trigger the workflow event.
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/iangrell/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's work
+
+Having a well organized team with a clear understanding of responsibilities and project outcome is very important.
