--- a/reflections/week09/04.md
+++ b/reflections/week09/04.md
@@ -8,9 +8,19 @@
 
 1. What is an ***SSL certificate***?
 
+Secure Sockets Layout which means that the data you share with a website is secure and encrypted. 
+
 2. What are the different types of certificates? What are they used for?
 
+Extended Validation will show the padlock, HTTPS, business name, and business country in the address bar and are used to show the legitimacy of the domain from the address bar.
+
+Organization Validated will verify that your organization and domain validation are real.
+
+Domain Validation will show a green padlock and offers a low level of encryption.
+
 3. What are some benefits of using SSL certificates?
+
+SSL are used for securing information between the visitor and the website.  This is also taken into account with Google search ranking.
 
 ## Afternoon Assignment Link
 
