--- a/reflections/week09/03.md
+++ b/reflections/week09/03.md
@@ -25,3 +25,5 @@ With the introduction of multiplexing with http/2, web browsers became vry effic
 **[Repo](https://github.com/iangrell/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's work
+
+I still do not have a very good grasp on where I am grabbing ids for function to be passed on.
