--- a/reflections/week09/04.md
+++ b/reflections/week09/04.md
@@ -27,3 +27,5 @@ SSL are used for securing information between the visitor and the website.  This
 **[Repo](https://github.com/iangrell/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's work
+
+Still a lot to do.
