--- a/reflections/week09/05.md
+++ b/reflections/week09/05.md
@@ -4,6 +4,17 @@ This reflection is open-format, so it can be whatever you like. Take this opport
 
 ## Prompts
 - What went well this week?
+
+We completed our project.
+
 - What did you learn that was a shock or surprise?
+
+Just how much work goes into a full application and all the required relationships.
+
 - What are you struggling with?
+
+Being able to plan out a project and try to see all the requirements from the beginning.
+
 - What would you count as a victory?
+
+We completed our project.
