--- a/reflections/week10/01.md
+++ b/reflections/week10/01.md
@@ -8,13 +8,23 @@
 
 1. What are the three categories of data types? How are they different?
 
+Value Type - these directly contain the value.
+Reference Type - contain a pointer to another memory location that holds the data.
+Pointer Type - contains memory address of another type.
+
 2. What are the ***value-type*** data types? What differences do you notice from JavaScript?
 
+These data types are much more specific than JavaScript.  They include, bool, byte, char, decimal, double, enum, float, int, long, sbyte, short, strct, uint, ulong, ushort.
+
 3. In your own words how do ***reference types*** get stored in memory? How does this differ from value types?
+
+They are stored at a separate location so that if the variable changes, that change will be reflected in any method using it.
 
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/iangrell/<ASSIGNMENT_REPO>)**
+**[Repo](https://iangrell.github.io/cSharpAPI/)**
 
 Identify at least 1 takeaway from today's assignment
+
+Great to start learning C#
