--- a/reflections/week10/03.md
+++ b/reflections/week10/03.md
@@ -8,13 +8,24 @@
 
 1. In a SQL table, what is the difference between information in a row and information in a column?
 
+Each row will be a new item, while the columns will be the properties.
+
 2. Demonstrate the basic structure for creating a new table called "characters" with the values "name, age, description" as strings, and an `int` id.
+
+CREATE TABLE characters(
+    id int NOT NULL,
+    name VARCHAR(255) NOT NULL,
+    age int NOT NULL,
+    description VARCHAR(255) NOT NULL
+)
 
 3. What are the difference between the following statements: 
 ```sql
 DELETE FROM table_name;
 DROP TABLE table_name;
 ```
+
+Delete from table will delete an item from the table vs. drop the table will delete the entire table.
 
 ## Afternoon Assignment Link
 
