--- a/reflections/week10/02.md
+++ b/reflections/week10/02.md
@@ -8,12 +8,22 @@
 
 1. What is a `List` in C#?
 
+List is a generic type that can create a collection of any other data type.  Can be used similar to an array in JavaScript.
+
 2. What `List` methods seem like you might use them often? Why?
 
+List.Add - might be useful to add to a list.
+List.Find - this will allow us to search the list.
+List.Remove - we will need to be able to delete an occurence from the list.
+
 3. How would you retrieve an item from a `List`? What method could you use?
+
+List.Find 
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/iangrell/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's assignment
+
+
