--- a/reflections/week10/04.md
+++ b/reflections/week10/04.md
@@ -8,6 +8,8 @@
 
 1. What is an ***Enum***, and what are some use cases for them?
 
+Enums are strongly typed constants.  Enums are used for more maintainable code because they are value types. 
+
 2. How can you modify an Enum?
 
 3. How have you used Enums in your afternoon lab projects this far? (if you have not yet, give an example of how you could.)
